--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header{
     padding:10px;
 }
 nav a {
+    margin-left:200px;
     border: 5px solid #000000;
 border-radius: 30px;
     padding:10px;
