--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ header{
     padding:10px;
 }
 nav a {
-    margin-left:200px;
+    margin-top:20px;
+    margin-left:300px;
     border: 5px solid #000000;
 border-radius: 30px;
     padding:10px;
@@ -23,7 +24,7 @@ main p {
    border: 5px solid #0C5AA6;
 }
 header img {
-    margin-left:330px;
+    margin-left:380px;
 }
 h1 {
 text-align: center;
