--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@ header{
     text-decoration: none;
     color:#58EE00;
 }
+nav {
+    padding:20px;
+}
 nav a {
-    margin-top:20px;
+    margin-top:50px;
     margin-left:300px;
     border: 5px solid #000000;
 border-radius: 30px;
@@ -37,4 +40,7 @@ footer {
     background-color:#0776A0;
     padding:10px;
     color: white;
+}
+footer p {
+    background-color:white;
 }
